--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,14 @@
         "homepage": "http://waavi.com"
     }],
     "require": {
-        "illuminate/support": "5.1.x|5.2.x|5.3.*|5.4.*|5.5.*",
-        "illuminate/config": "5.1.x|5.2.x|5.3.*|5.4.*|5.5.*",
-        "mremi/url-shortener": "^2.0"
+        "illuminate/support": "~5.6.1",
+        "illuminate/config": "~5.6.1",
+        "mremi/url-shortener": "~2.2.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6",
-        "orchestra/testbench": "3.1.x|3.2.x|3.3.x|3.4.x|3.5.x",
-        "mockery/mockery": "^0.9.4"
+        "phpunit/phpunit": "^7.0",
+        "orchestra/testbench": "~3.6.0",
+        "mockery/mockery": "^1.2.0"
     },
     "autoload": {
         "psr-4": {
